<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlterarDadosActivity">

    <LinearLayout


        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:orientation="vertical"

        tools:context=".ConsultaDadosActivity" >

        <LinearLayout

            android:id="@+id/linearLayout1"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:background="#3ba0e2" >



            <ImageView

                android:id="@+id/imageView1"

                android:layout_width="72dp"

                android:layout_height="72dp"

                android:contentDescription="@string/todo"

                android:src="@drawable/icone_alterar_dados" />

            <TextView

                android:id="@+id/textView1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceLarge"

                />

            <LinearLayout

                android:id="@+id/layoutCorFundo"

                android:layout_width="fill_parent"

                android:layout_height="match_parent"

                android:background="#edb068"

                android:gravity="center" >

                <TextView

                    android:id="@+id/textView2"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:text="@string/alterar_dados"

                    android:textAppearance=

                        "?android:attr/textAppearanceLarge"

                    android:textColor="#ffffff" />

            </LinearLayout>

        </LinearLayout>



        <TextView

            android:id="@+id/textView3"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:paddingTop="10dp"

            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="#000000"

            android:textSize="18sp"

            tools:text="@string/nome" />



        <EditText

            android:id="@+id/txtnome"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="@string/digite_seu_nome"

            android:importantForAutofill="no"

            android:inputType="text" />



        <TextView

            android:id="@+id/textView4"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="#000000"

            android:textSize="18sp"

            tools:text="@string/telefone" />


        <EditText

            android:id="@+id/txttelefone"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="@string/digite_seu_telefone"

            android:importantForAutofill="no"

            android:inputType="text"
            android:minHeight="48dp">


            <requestFocus />

        </EditText>



        <TextView

            android:id="@+id/textView5"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="#000000"

            android:textSize="18sp"

            tools:text="@string/e_mail" />



        <EditText

            android:id="@+id/txtemail"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="@string/digite_seu_email"

            android:importantForAutofill="no"

            android:inputType="text|textEmailAddress" />

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:gravity="center"

            android:paddingTop="0dp" >



            <ImageView

                android:id="@+id/imgprimeiro"

                android:layout_width="50dp"

                android:layout_height="50dp"

                android:contentDescription="@string/todo"

                android:scaleType="fitXY"

                android:src="@drawable/botao_alt_primeiro" />



            <ImageView

                android:id="@+id/imganterior"

                android:layout_width="50dp"

                android:layout_height="50dp"

                android:contentDescription="@string/todo"

                android:scaleType="fitXY"

                android:src="@drawable/botao_alt_anterior" />



            <ImageView

                android:id="@+id/imgproximo"

                android:layout_width="50dp"

                android:layout_height="50dp"

                android:contentDescription="@string/todo"

                android:scaleType="fitXY"

                android:src="@drawable/botao_alt_proximo" />



            <ImageView

                android:id="@+id/imgultimo"

                android:layout_width="50dp"

                android:layout_height="50dp"

                android:contentDescription="@string/todo"

                android:scaleType="fitXY"

                android:src="@drawable/botao_alt_ultimo" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:gravity="center"

            android:paddingTop="0dp" >



            <TextView

                android:id="@+id/txtstatus_registro"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:contentDescription="@string/status"

                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:gravity="center" >

            <Button

                android:id="@+id/btalterardados"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/alterar_dados" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>